# datasci-210-2025-summer-formula1

./: .gitattributes  pyproject.toml
Thomas/template/: Dockerfile  README.md  pyproject.toml
Thomas/template/infra/: deployment-pythonapi.yaml  deployment-redis.yaml  service-prediction.yaml  service-redis.yaml
Thomas/template/src/: api_v1.py  housing_predict.py  main.py  model_manager.py
Thomas/template/tests/: conftest.py  test_src.py
deliverables/f1-prediction-system/database/: Dockerfile  README.md  build.sh  docker-compose.yml  pyproject.toml  run.sh
deliverables/f1-prediction-system/database/client-tools/: validate_api_readiness.py  verify_data_integrity.py
deliverables/f1-prediction-system/database/client_tools/: db_client.py  example_queries.sql
deliverables/f1-prediction-system/database/config/: data_config.py  postgresql.conf
deliverables/f1-prediction-system/database/init-scripts/: 01-schema.sql  02-functions.sql  03-seed.sql  99-load-data.sh  postgresql.conf
deliverables/f1-prediction-system/database/python/: etl_integration.py
deliverables/f1-prediction-system/database/scripts/: ML_inc_predictor.py  f1_ml_incident_validation_20250804_002153.json  integrated_dashboard.py  load_data.py  setup.sh  test_pg.py  utils.sh
deliverables/f1-prediction-system/model_service/: Dockerfile  pyproject.toml  requirements.txt
deliverables/f1-prediction-system/model_service/database/: __init__.py
deliverables/f1-prediction-system/model_service/database/client_tools/: __init__.py  db_client.py
deliverables/f1-prediction-system/model_service/src/: __init__.py  api_v1.py  main.py  model_manager.py
deliverables/f1-prediction-system/webapp/: .env.example  Dockerfile  Justfile  README.md  examine_npy.py  pyproject.toml  requirements.txt
deliverables/f1-prediction-system/webapp/src/webapp/: 2022probs.npy  dev.py  f1dev.py
sean/: .gitignore  README.md  pyproject.toml
sean/artifacts/capstone/: README.md  pyproject.toml
sean/artifacts/capstone/src/capstone/: preprocessor.py
sean/artifacts/capstone/src/f1_etl/: __init__.py  aggregator.py.deleteme  main.py
sean/artifacts/f1_etl/: CHANGELOG.md  pyproject.toml
sean/artifacts/f1_etl/src/f1_etl/: pipeline.py
sean/diagrams/: week-9.graffle
sean/docs/: f1-safety-car-tutorial.md
sean/notebooks/: README.md  eda.ipynb  pyproject.toml  temporal-sliding-window-predictions-with-log-reg.ipynb  toy_models.ipynb
sean/notebooks/before week 7/: feature_engineering.ipynb
sean/notebooks/before week 7/here be dragons/: evaluate_splits_multi_race_logreg.py  evaluate_splits_single_race.py
sean/notebooks/week 10/: db-planning.ipynb  model-serving.ipynb  pca.ipynb  train_pca.py  train_pca.sh
sean/notebooks/week 10/models/: my_model.joblib
sean/notebooks/week 11/: db-prep.ipynb
sean/notebooks/week 12/: extract_metrics.py  load_and_eval.py  load_and_eval.sh  train.py  train.sh
sean/notebooks/week 7/: STATUS_REPORT_20250617.md  toy_models.ipynb
sean/notebooks/week 8/: aeon_f1_preprocessing.ipynb  aeon_f1_preprocessing.py  etl_pipeline.ipynb  etl_pipeline_final.ipynb  preprocessing.ipynb  prompt.md  test_f1_etl_package.ipynb  toy_models.ipynb
sean/notebooks/week 9/: catch22.ipynb  convenience_functions.ipynb  dataset_filtering_by_driver.ipynb  driver_encoder.ipynb  extract_metrics.py  label_encoding.ipynb  track_status.ipynb  traditional_ml_eval_plan.md  train.ipynb  train.py  train_five.py  train_five.sh  train_for.py  train_too.ipynb  train_too.py  train_tree.py
sean/notebooks/week 9/evaluation_results/: catch22_logistic_metrics_summary.md  catch22_rf_metrics_summary.md  dummy_frequent_20250702_221117_complete.json  dummy_frequent_20250702_221117_summary.txt  dummy_stratified_20250702_221117_complete.json  dummy_stratified_20250702_221117_summary.txt  logistic_regression_20250702_221117_complete.json  logistic_regression_20250702_221117_summary.txt  model_comparison_20250702_221134_comparison.json  random_forest_20250702_221131_complete.json  random_forest_20250702_221131_summary.txt  rocket_adasyn_metrics_summary.md  rocket_metrics_summary.md  rocket_smote_metrics_summary.md
sean/notebooks/week 9/evaluation_results/20250704_094903/: ts_forest_20250704_094903_complete.json  ts_forest_20250704_094903_external_complete.json  ts_forest_20250704_094903_external_summary.txt  ts_forest_20250704_094903_summary.txt
sean/notebooks/week 9/evaluation_results/20250704_103530/: random_forest_20250704_103530_complete.json  random_forest_20250704_103530_summary.txt
sean/notebooks/week 9/evaluation_results/20250704_104932/: random_forest_20250704_104932_complete.json  random_forest_20250704_104932_external_complete.json  random_forest_20250704_104932_external_summary.txt  random_forest_20250704_104932_summary.txt
sean/notebooks/week 9/evaluation_results/20250704_113148_rocket/: random_forest_rocket_complete.json  random_forest_rocket_external_complete.json  random_forest_rocket_external_summary.txt  random_forest_rocket_summary.txt
sean/notebooks/week 9/evaluation_results/20250704_113519_rocket/: random_forest_2025-07-04T11:34:59.615862_rocket_complete.json  random_forest_2025-07-04T11:34:59.615862_rocket_external_complete.json  random_forest_2025-07-04T11:34:59.615862_rocket_external_summary.txt  random_forest_2025-07-04T11:34:59.615862_rocket_summary.txt
sean/notebooks/week 9/evaluation_results/20250704_115401_rocket/: random_forest_20250704_115401_rocket_complete.json  random_forest_20250704_115401_rocket_external_complete.json  random_forest_20250704_115401_rocket_external_summary.txt  random_forest_20250704_115401_rocket_summary.txt
sean/notebooks/week 9/evaluation_results/20250704_125355_rocket_smote/: random_forest_20250704_125355_rocket_smote_complete.json  random_forest_20250704_125355_rocket_smote_external_complete.json  random_forest_20250704_125355_rocket_smote_external_summary.txt  random_forest_20250704_125355_rocket_smote_summary.txt
sean/src/: evaluate_splits_multi_race_logreg_2.py  evaluate_splits_multi_race_xgboost.py  poc_0.py  poc_1.py  poc_2.py  poc_3.py
(+547 files in other folders)
