[project]
name = "capstone"
version = "0.1.0"
description = "A machine learning project focused on Formula 1 classification tasks using temporal sliding windows and telemetry data."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastf1>=3.5.3",
    "ipykernel>=6.29.5",
    "pandas>=2.3.0",
    "pip>=25.1.1",
    "scikit-learn>=1.7.0",
    "seaborn>=0.13.2",
    "xgboost>=3.0.2",
]
