[project]
name = "notebooks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aeon",
    "f1-etl==0.2.3",
    "fastf1>=3.5.3",
    "imbalanced-learn",
    "ipykernel>=6.29.5",
    "numpy<2.3",
    "pandas>=2.3.0",
    "scikit-learn>=1.7.0",
    "seaborn>=0.13.2",
    "tensorflow>=2.19.0",
    "tqdm>=4.67.1",
    "xgboost>=3.0.2",
]

[tool.uv.sources]
imbalanced-learn = { git = "https://github.com/scikit-learn-contrib/imbalanced-learn", rev = "master" }
aeon = { git = "https://github.com/aeon-toolkit/aeon.git", rev = "main" }
