[project]
name = "webapp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Sean Sica", email = "23294618+seansica@users.noreply.github.com" }
]
requires-python = ">=3.11"
dependencies = []

[project.scripts]
webapp = "webapp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
