[project]
name = "webapp"
version = "0.1.0"
description = "F1 Prediction System Web Application"
readme = "README.md"
authors = [
    { name = "Justin Fiedler", email = "justinfiedler@ischool.berkeley.edu" }
]
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.1",
    "flask-caching>=2.3.1",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "requests>=2.32.4",
    "gunicorn>=20.1.0",
    "python-dotenv>=1.1.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "watchdog>=3.0.0",
]

[project.scripts]
webapp = "webapp.f1dev:app"
webapp-dev = "webapp.dev:run_dev"

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
