[project]
name = "capstone"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Sean Sica", email = "23294618+seansica@users.noreply.github.com" }
]
requires-python = ">=3.11"
dependencies = [
    "fastf1>=3.5.3",
    "ipykernel>=6.29.5",
    "pandas>=2.3.0",
    "scikit-learn>=1.7.0",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
    "xgboost>=3.0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
