[project]
name = "f1-etl"
version = "0.2.0"
description = "This package contains an ETL pipeline for extracting, transforming, and preparing Formula 1 telemetry data for time series classification tasks, specifically designed for safety car prediction and other F1 data science applications."
readme = "README.md"
authors = [
    { name = "Sean Sica", email = "23294618+seansica@users.noreply.github.com" }
]
requires-python = ">=3.11"
dependencies = [
    "fastf1>=3.5.3",
    "pandas>=2.3.0",
    "tqdm>=4.67.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "commitizen>=4.8.3",
]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_scheme = "pep440"
version_provider = "pep621"
update_changelog_on_bump = true
major_version_zero = true
